# UnityDenoiserPlugin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
CMake/: CompilerInfo.cmake  ConfigCompilerFlags.cmake  CopyDLL.cmake  FindCUDA.cmake  FindNVTX.cmake  FindOptiX.cmake  LinuxCPUInfo.cmake  Macros.cmake  ptx2cpp.cmake  testmain.c
CMake/FindCUDA/: run_nvcc.cmake
Sources/: .clang-format  DLSS.cpp  DLSS.h  Exception.h  OIDNDenoiser.cpp  OIDNDenoiser.h  OidnDenoiseContext.cpp  OidnDenoiseContext.h  OptixDenoiseContext.cpp  OptixDenoiseContext.h  OptixDenoiser.cpp  OptixDenoiser.h  RHI.cpp  RHI.h  RenderingPlugin.cpp  Utils.cpp  Utils.h  pch.h
Sources/Shaders/: CopyContentBufferToTexture.cs.hlsl  CopyContentBufferToTexture.h  CopyContentTextureToBuffer.cs.hlsl  CopyContentTextureToBuffer.h
UnityDenoiserPlugin/: DlssCSharpBinding.cs  DlssUnity.cs  RingBufferAllocator.cs  UnityDenoiserPlugin.cs  nvsdk_ngx_defs.cs  nvsdk_ngx_defs_dlssd.cs  nvsdk_ngx_helpers.cs  nvsdk_ngx_helpers_dlssd.cs
UnityDenoiserPlugin/DLSSSampleCode~/: DLSSRayReconstruction.cs  DLSSSuperSampling.cs  IRenderPass.cs  ScopedCommandBuffer.cs
